Add log in configuration.

--- a/comet/block/templates/block_show.html
+++ b/comet/block/templates/block_show.html
@@ -6,10 +6,8 @@
   {{ super() }}
 {% endblock %}
 
-{% block body %}
-<header class="marketing-hero text-center">
-<h2 class="">Block</h2>
-</header>
+{% block hero %}Block{% endblock %}
 
+{% block body %}
 
 {% endblock %}
