--- a/comet/people/templates/people_show.html
+++ b/comet/people/templates/people_show.html
@@ -6,10 +6,8 @@
   {{ super() }}
 {% endblock %}
 
-{% block body %}
-<header class="marketing-hero text-center">
-<h2 class="">People</h2>
-</header>
+{% block hero %}People{% endblock %}
 
+{% block body %}
 
 {% endblock %}
