--- a/comet/static/app/src/assets/css/styles.less
+++ b/comet/static/app/src/assets/css/styles.less
@@ -14,7 +14,10 @@
 }
 
 .marketing-hero {
-    background: url(http://foundation.zurb.com/assets/img/subheader-bg-01.svg) center center repeat-x;
+    min-height: 100px;
+    margin-bottom: 20px;
+    background-color: @blue;
+    color: @white;
     background-size: cover;
     position: relative;
     padding: 2.5rem 0 4.5rem;
