--- a/comet/config/templates/config_show.html
+++ b/comet/config/templates/config_show.html
@@ -3,13 +3,71 @@
 {% block title %}Config{% endblock %}
 
 {% block head %}
-  {{ super() }}
+{{ super() }}
 {% endblock %}
 
+{% block hero %}Configuration{% endblock %}
+
 {% block body %}
-<header class="marketing-hero text-center">
-<h2 class="">Config</h2>
-</header>
+<div class="row" data-equalizer>
 
+    <div class="medium-6 columns" data-equalizer-watch>
+        <div class="callout secondary">
+            <h3>System</h3>
+            <hr/>
+            <ul>
+                <li>
+                    <a href="{{ url_for('config.system') }}">Basic settings</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 
+    <div class=" medium-6 columns" data-equalizer-watch>
+        <div class="callout secondary">
+            <h3>Development</h3>
+            <hr/>
+            <ul>
+                <li>
+                    <a href="{{ url_for('config.clear_cache') }}">Clear cache</a>
+                </li>
+                <li>
+                    <a href="{{ url_for('config.log') }}">Logging and errors</a>
+                </li>
+                <li>
+                    <a href="">Maintenance</a>
+                </li>
+                <li>
+                    <a href="">Configuration</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="medium-6 columns" data-equalizer-watch="foo">
+        <div class="callout secondary">
+            <h3>Meta</h3>
+            <hr/>
+            <ul>
+                <li>
+                    <a href="">Metatag</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="medium-6 columns" data-equalizer-watch="foo">
+        <div class="callout secondary">
+            <h3>Language</h3>
+            <hr/>
+            <ul>
+                <li>
+                    <a href="">Languages</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
 {% endblock %}
