--- a/comet/content/templates/content_show.html
+++ b/comet/content/templates/content_show.html
@@ -6,10 +6,8 @@
   {{ super() }}
 {% endblock %}
 
-{% block body %}
-<header class="marketing-hero text-center">
-<h2 class="">Content</h2>
-</header>
+{% block hero %}Content{% endblock %}
 
+{% block body %}
 
 {% endblock %}
