--- a/comet/home/templates/home.html
+++ b/comet/home/templates/home.html
@@ -2,14 +2,11 @@
 
 {% block title %}Home{% endblock %}
 
-{% block body %}
-<header class="marketing-hero text-center">
-    <h2>Comet <strong>CMS</strong></h2>
-</header>
+{% block hero %}Comet <strong>CMS</strong>{% endblock %}
 
+{% block body %}
 <article class="home row">
     <div class="small-12 large-12 columns">
-        <h3>Comet <strong>CMS</strong></h3>
 
         <div class="row small-up-1 medium-up-2 large-up-3">
 
@@ -48,7 +45,7 @@
                     <div class="callout">
                         <p>Config</p>
                         <p class="lead">Copernican Revolution caused an uproar</p>
-                        <p class="subheader">Find Earth-like planets life outside the Solar System</p>
+                        <p class="subheader">Find Earth</p>
                     </div>
                 </a>
             </div>
