--- a/comet/report/templates/report_show.html
+++ b/comet/report/templates/report_show.html
@@ -6,11 +6,9 @@
   {{ super() }}
 {% endblock %}
 
-{% block body %}
-<header class="marketing-hero text-center">
-<h2 class="">Report</h2>
-</header>
+{% block hero %}Report{% endblock %}
 
+{% block body %}
 <article class="row">
   <table>
   <caption>Most Expensive Sandwiches by City</caption>
